{
  "version": 4,
  "terraform_version": "0.12.8",
  "serial": 133,
  "lineage": "5465f98a-f169-276b-76fe-b91ba9d16582",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:153627826700:security-group/sg-0028059ad5ba8513c",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-0028059ad5ba8513c",
            "name": "default",
            "tags": {},
            "vpc_id": "vpc-0b206a19818b8a6d4"
          },
          "depends_on": [
            "module.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0dd6b23f4afe194af",
            "public_dns": "ec2-34-240-136-12.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.240.136.12",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0d8d40b2daaa336d3",
            "owner_id": "153627826700",
            "tags": {
              "Name": "myprod-igw"
            },
            "vpc_id": "vpc-0b206a19818b8a6d4"
          },
          "depends_on": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "private-c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1f8e5d15266a0f7",
            "original_route_table_id": "rtb-0b4c9b53b60883574",
            "route_table_id": "rtb-011ce143495bcbad4",
            "vpc_id": "vpc-0b206a19818b8a6d4"
          },
          "depends_on": [
            "aws_route_table.private-c",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dd6b23f4afe194af",
            "id": "nat-05aa3f0498d3940b5",
            "network_interface_id": "eni-07b14648dee87ab63",
            "private_ip": "10.7.150.152",
            "public_ip": "34.240.136.12",
            "subnet_id": "subnet-045312bce5def621f"
          },
          "depends_on": [
            "aws_eip.nat_eip-b",
            "aws_subnet.public-b"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_a_ngw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02c0a2754167b63141080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-05aa3f0498d3940b5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02c0a2754167b6314",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.ngw-b",
            "aws_route_table.private-a"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_a_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "10.0.0.0/8",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "vgw-099b6d79591be861f",
            "id": "r-rtb-02c0a2754167b63143423270202",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02c0a2754167b6314",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_route_table.private-a",
            "aws_vpn_gateway.vgw"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_b_ngw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05e2283187a89a57e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-05aa3f0498d3940b5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05e2283187a89a57e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.ngw-b",
            "aws_route_table.private-b"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_b_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "10.0.0.0/8",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "vgw-099b6d79591be861f",
            "id": "r-rtb-05e2283187a89a57e3423270202",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05e2283187a89a57e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_route_table.private-b",
            "aws_vpn_gateway.vgw"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_c_ngw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-011ce143495bcbad41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-05aa3f0498d3940b5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-011ce143495bcbad4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.ngw-b",
            "aws_route_table.private-c"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_c_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "10.0.0.0/8",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "vgw-099b6d79591be861f",
            "id": "r-rtb-011ce143495bcbad43423270202",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-011ce143495bcbad4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_route_table.private-c",
            "aws_vpn_gateway.vgw"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_ig",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d8d40b2daaa336d3",
            "id": "r-rtb-0a0e40cf1cf16f9491080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a0e40cf1cf16f949",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.igw",
            "aws_route_table.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "10.0.0.0/8",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "vgw-099b6d79591be861f",
            "id": "r-rtb-0a0e40cf1cf16f9493423270202",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a0e40cf1cf16f949",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_vpn_gateway.vgw"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02c0a2754167b6314",
            "owner_id": "153627826700",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-myprod-a"
            },
            "vpc_id": "vpc-0b206a19818b8a6d4"
          },
          "depends_on": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05e2283187a89a57e",
            "owner_id": "153627826700",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-myprod-b"
            },
            "vpc_id": "vpc-0b206a19818b8a6d4"
          },
          "depends_on": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-011ce143495bcbad4",
            "owner_id": "153627826700",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-myprod-c"
            },
            "vpc_id": "vpc-0b206a19818b8a6d4"
          },
          "depends_on": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a0e40cf1cf16f949",
            "owner_id": "153627826700",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public-myprod"
            },
            "vpc_id": "vpc-0b206a19818b8a6d4"
          },
          "depends_on": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a0dd8ae037b95ad",
            "route_table_id": "rtb-02c0a2754167b6314",
            "subnet_id": "subnet-0245e38394b3e9dd9"
          },
          "depends_on": [
            "aws_route_table.private-a",
            "aws_subnet.private-a"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0715cc74fae596de1",
            "route_table_id": "rtb-05e2283187a89a57e",
            "subnet_id": "subnet-07b25014cd743b9b6"
          },
          "depends_on": [
            "aws_route_table.private-b",
            "aws_subnet.private-b"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f99f3b413609048",
            "route_table_id": "rtb-0a0e40cf1cf16f949",
            "subnet_id": "subnet-0185c6b9842fd555c"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public-a"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0874be87c7a35dcb7",
            "route_table_id": "rtb-0a0e40cf1cf16f949",
            "subnet_id": "subnet-045312bce5def621f"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public-b"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-c",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:153627826700:subnet/subnet-0245e38394b3e9dd9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.7.150.176/28",
            "id": "subnet-0245e38394b3e9dd9",
            "map_public_ip_on_launch": false,
            "owner_id": "153627826700",
            "tags": {
              "Name": "private-myprod-a"
            },
            "vpc_id": "vpc-0b206a19818b8a6d4"
          },
          "depends_on": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:153627826700:subnet/subnet-07b25014cd743b9b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.7.150.192/27",
            "id": "subnet-07b25014cd743b9b6",
            "map_public_ip_on_launch": false,
            "owner_id": "153627826700",
            "tags": {
              "Name": "private-myprod-b"
            },
            "vpc_id": "vpc-0b206a19818b8a6d4"
          },
          "depends_on": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:153627826700:subnet/subnet-07757f3715c5f5ce3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.7.150.224/27",
            "id": "subnet-07757f3715c5f5ce3",
            "map_public_ip_on_launch": false,
            "owner_id": "153627826700",
            "tags": {
              "Name": "private-myprod-c"
            },
            "vpc_id": "vpc-0b206a19818b8a6d4"
          },
          "depends_on": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:153627826700:subnet/subnet-0185c6b9842fd555c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.7.150.128/28",
            "id": "subnet-0185c6b9842fd555c",
            "map_public_ip_on_launch": false,
            "owner_id": "153627826700",
            "tags": {
              "Name": "public-myprod-a"
            },
            "vpc_id": "vpc-0b206a19818b8a6d4"
          },
          "depends_on": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:153627826700:subnet/subnet-045312bce5def621f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.7.150.144/28",
            "id": "subnet-045312bce5def621f",
            "map_public_ip_on_launch": false,
            "owner_id": "153627826700",
            "tags": {
              "Name": "public-myprod-b"
            },
            "vpc_id": "vpc-0b206a19818b8a6d4"
          },
          "depends_on": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:153627826700:vpc/vpc-0b206a19818b8a6d4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.7.150.128/25",
            "default_network_acl_id": "acl-0cc4a43f530f6ea51",
            "default_route_table_id": "rtb-0b4c9b53b60883574",
            "default_security_group_id": "sg-0028059ad5ba8513c",
            "dhcp_options_id": "dopt-76511410",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b206a19818b8a6d4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b4c9b53b60883574",
            "owner_id": "153627826700",
            "tags": {
              "Name": "vpc-myprod",
              "environment": "myprod",
              "live": "no",
              "owner": "devakumar",
              "project": "My DevOps project"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_blocks": [
              "52.218.0.0/17",
              "54.231.128.0/19"
            ],
            "id": "vpce-00ab6bfde6d9162b6",
            "owner_id": "153627826700",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6da54004",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-011ce143495bcbad4",
              "rtb-02c0a2754167b6314",
              "rtb-05e2283187a89a57e",
              "rtb-0a0e40cf1cf16f949"
            ],
            "service_name": "com.amazonaws.eu-west-1.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0b206a19818b8a6d4"
          },
          "depends_on": [
            "aws_route_table.private-a",
            "aws_route_table.private-b",
            "aws_route_table.private-c",
            "aws_route_table.public",
            "aws_vpc.myvpc"
          ]
        }
      ]
    }
  ]
}